--- a/components/header.html
+++ b/components/header.html
@@ -1,19 +1,25 @@
 <header>
-    <div class="logo">MySite</div>
-    <button id="open-sidebar" onclick="openSidebar()">
+    <div class="header-left">
+      <img class="logo" src="../images/logo.svg" alt="Logo" width="40" height="40">
+      <div class="logo-name">RentHub</div>
+    </div>
+    <div class="header-right">
+      <button id="open-sidebar" onclick="openSidebar()">
         <img src="../images/menu.svg" alt="Open" width="40" height="40">
-    </button>
-    <nav id="navbar">
+      </button>
+      <nav id="navbar">
         <ul>
-            <li >
-                <button id="close-sidebar" onclick="closeSidebar()">
-                    <img src="../images/close.svg" alt="Close" width="40" height="40">
-                </button>
-            </li>
-            <li class="nav-ele" ><a href="/index.html">Explore</a></li>
-            <li class="nav-ele contact-us"><a href="/pages/contact.html">Contact Us</a></li>
-            <li class="auth-item nav-signup"><a href="/pages/signup.html">Sign Up</a></li>
-            <li class="auth-item nav-login"><a href="/pages/login.html"> Login </a></li>
+          <li>
+            <button id="close-sidebar" onclick="closeSidebar()">
+              <img src="../images/close.svg" alt="Close" width="40" height="40">
+            </button>
+          </li>
+          <li class="nav-ele explore"><a href="/index.html">Explore</a></li>
+          <li class="nav-ele contact-us"><a href="/pages/contact.html">Contact Us</a></li>
+          <li class="auth-item nav-signup"><a href="/pages/signup.html">Sign Up</a></li>
+          <li class="auth-item nav-login"><a href="/pages/login.html">Login</a></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </div>
+  </header>
+  
