--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,34 @@ body {
   }
   
 header {
-  background-color: #0f0f0f;
+  background-color: #0e0e0e;
   color: white;
   padding: 12px 30px;
+  border: solid 1px rgba(77, 77, 77, 0.533);
+  align-items: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.logo-name {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: white;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
+
 .logo {
   font-size: 1.5em;
   font-weight: bold;
@@ -79,6 +100,7 @@ nav ul li a {
 .contact-us a{
   margin-right: 15px;
 }
+
 #open-sidebar{
   display: none;
 }
@@ -86,6 +108,8 @@ nav ul li a {
   display: none;
 }
 /* end */
+
+
 /* side menu */
 @media screen and (max-width: 830px) {
   nav{
@@ -301,4 +325,3 @@ nav ul li a {
   color: #ffebc1;
 }
 /* end */
-
