--- a/components/featured.html
+++ b/components/featured.html
@@ -1,76 +1,7 @@
 <section class="product-category">
-    <h1>Featured Products</h1>
-    <div class="product-grid">
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h3>Product Title</h3>
-          <p>Short description</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  
+  <h1>Featured Products</h1>
+  <div class="product-grid" id="product-grid">
+    <!-- Cards will be inserted here by JavaScript -->
+  </div>
+</section>
+
