--- a/components/header.html
+++ b/components/header.html
@@ -15,7 +15,7 @@
             </button>
           </li>
           <li class="nav-ele explore"><a href="/index.html">Explore</a></li>
-          <li class="nav-ele contact-us"><a href="/pages/contact.html">Contact Us</a></li>
+          <li class="nav-ele contact-us"><a href="/pages/product.html">Contact Us</a></li>
           <li class="auth-item nav-signup"><a href="/pages/signup.html">Sign Up</a></li>
           <li class="auth-item nav-login"><a href="/pages/login.html">Login</a></li>
         </ul>
